/**
\page changelog Changelog

\section c019 version 0.18 -> 0.18+

 - Restored SDL functionality. (16-mar-2008, Camiel
   Vanderhoeven)
 - Better exception handling, restored Serial port menu 
   functionality (14-mar-2008, Camiel Vanderhoeven)
 - Ability to stop and restart threads, restored save/restore
   state functionality. (13-mar-2008, Camiel Vanderhoeven)
 - Use separate threads for devices rather than crowding
   everything into one thread. Use Poco libraries for platform
   independent threading. NOTE: This patch breaks some 
   functionality that we will need to regain in the future. 
   (05-mar-2008, Camiel Vanderhoeven)
 .
 
\section c018 version 0.17 -> 0.18

Version 0.18 contains a lot of compatibility fixes, both with
host and guest operating systems.

 - Merged Brian wheeler's New IDE code into the standard 
   controller. NewIde class has disappeared. (04-mar-2008,
   Camiel Vanderhoeven)
 - Support some basic MP features. (CPUID read from C-Chip MISC 
   register, inter-processor interrupts) (04-mar-2008, Camiel
   Vanderhoeven)
 - Allow memory sizes over 1 GB. (02-mar-2008, Brian Wheeler)
 - Natural way to specify large numeric values ("10M") in the
   config file. (02-mar-2008, Camiel vanderhoeven)
 - Add BREAKPOINT INSTRUCTION command to IDB. (29-feb-2008, Brian
   Wheeler)
 - Restart serial port connection if lost. (29-feb-2008, Brian
   Wheeler)
 - Fix RMC reported psu and temperature status. (29-feb-2008, Brian
   Wheeler)
 - Compute SROM checksum for network interface. Tru64 needs this.
   (29-feb-2008, Brian Wheeler)
 - Fix vms boot problems from ide cdrom and make Tru64 installation
   possible by: a) Clearing the busmaster active bit when the bit 1
   is written to the busmaster status register; and b) Attempting 
   to refire the interrupt if the driver seems to have missed it.
   (27-feb-2008, Brian Wheeler)
 - Major rewrite of NIC code. Real internal loopback support, ring